--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>G-Man</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
 
+  <body>
+    <header>
+      <h1>G-Man Discord Bot</h1>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#commands">Command List</a></li>
+          <li><a href="#invite">Bot Invite</a></li>
+          <li><a href="#support">Support</a></li>
+          <li><a href="#about">About the bot</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <section id="home">
+      <h2>Rise and shine, Mr. Freeman. Rise. And. Shine.</h2>
+      <p>This is a multipurpose Discord bot intended to be entertaining, full of freedom, and easy to use.</p>
+    </section>
+    <section id="commands">
+      <h2>Commands</h2>
+      <div class="command-list">
+        <div class="command">
+          <h3>Placeholder Command</h3>
+          <p>Placeholder description</p>
+        </div>
+      </div>
+    </section>
+    <section id="invite">
+      <h2>Add the public bot to a server or add it to your account</h2>
+      <a href="https://discord.com/oauth2/authorize?client_id=1243599388165668904" class="add-button">Add</a>
+    </section>
+    <section id="support">
+      <h2>Support server</h2>
+      <p>Join the support server in order to either get help or to self-host the bot:</p>
+      <iframe src="https://discord.com/widget?id=1337128182964293632&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+      <a href="https://discord.gg/3jevKz8Tk6" class="support-button">Join</a>
+    </section>
+    <section id="about">
+      <h2>About</h2>
+      <p>G-Man is based on G-Man from the Half-Life series. (shocker, i know.) It provides utility, information, media manipulation and downloading commands. Both for you and your server.</p>
+    </section>
+    <footer>
+      <p>&copy; 2025 MiniatureEge2006. All rights reserved.</p>
+    </footer>
+  </body>
+</html>
