--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </section>
     <section id="commands">
       <h2>Commands</h2>
+      <button id="toggle-commands" class="collapsible">Show Commands</button>
       <div class="command-list">
         <div class="command">
           <h3>Placeholder Command</h3>
