--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="commands">
       <h2>Commands</h2>
       <button id="toggle-commands" class="collapsible">Show Commands</button>
-      <div class="command-list">
+      <div id="command-list" class="command-list">
         <div class="command">
           <h3>Placeholder Command</h3>
           <p>Placeholder description</p>
