--- a/index.html
+++ b/index.html
@@ -52,5 +52,7 @@
     <footer>
       <p>&copy; 2025 MiniatureEge2006. All rights reserved.</p>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
