--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <h1>G-Man Discord Bot</h1>
+      <h1><span class="typewriter">G-Man Discord Bot</span></h1>
       <nav>
         <ul>
           <li><a href="#home">Home</a></li>
@@ -22,11 +22,11 @@
     </header>
 
     <section id="home">
-      <h2>Rise and shine, Mr. Freeman. Rise. And. Shine.</h2>
+      <h2><span class="typewriter">Rise and shine, Mr. Freeman. Rise. And. Shine.</span></h2>
       <p>This is a multipurpose Discord bot intended to be entertaining, full of freedom, and easy to use.</p>
     </section>
     <section id="commands">
-      <h2>Commands</h2>
+      <h2><span class="typewriter">Commands</span></h2>
       <button id="toggle-commands" class="collapsible">Show Commands</button>
       <div id="command-list" class="command-list">
         <div class="command">
@@ -36,17 +36,17 @@
       </div>
     </section>
     <section id="invite">
-      <h2>Add the public bot to a server or add it to your account</h2>
+      <h2><span class="typewriter">Add the public bot to a server or add it to your account</span></h2>
       <a href="https://discord.com/oauth2/authorize?client_id=1243599388165668904" class="add-button">Add</a>
     </section>
     <section id="support">
-      <h2>Support server</h2>
+      <h2><span class="typewriter">Support server</span></h2>
       <p>Join the support server in order to either get help or to self-host the bot:</p>
       <iframe src="https://discord.com/widget?id=1337128182964293632&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
       <a href="https://discord.gg/3jevKz8Tk6" class="support-button">Join</a>
     </section>
     <section id="about">
-      <h2>About</h2>
+      <h2><span class="typewriter">About</span></h2>
       <p>G-Man is based on G-Man from the Half-Life series. (shocker, i know.) It provides utility, information, media manipulation and downloading commands. Both for you and your server.</p>
     </section>
     <footer>
