--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <footer>
       <p>&copy; 2025 MiniatureEge2006. All rights reserved.</p>
     </footer>
-
+    <audio id="click-sound" src="sounds/half-life-2-menu-button.mp3"></audio>
     <script src="script.js"></script>
   </body>
 </html>
