--- a/index.html
+++ b/index.html
@@ -30,8 +30,16 @@
       <button id="toggle-commands" class="collapsible">Show Commands</button>
       <div id="command-list" class="command-list">
         <div class="command">
-          <h3>Placeholder Command</h3>
-          <p>Placeholder description</p>
+          <h3>ai</h3>
+          <p>Use G-AI to chat, ask questions, and generate responses.</p>
+        </div>
+        <div class="command">
+          <h3>Placeholder</h3>
+          <p>Placeholder</p>
+        </div>
+        <div class="command">
+          <h3></h3>
+          <p></p>
         </div>
       </div>
     </section>
