--- a/index.html
+++ b/index.html
@@ -30,16 +30,48 @@
       <button id="toggle-commands" class="collapsible">Show Commands</button>
       <div id="command-list" class="command-list">
         <div class="command">
-          <h3>ai</h3>
-          <p>Use G-AI to chat, ask questions, and generate responses.</p>
+          <h3>join</h3>
+          <p>Join a voice channel.</p>
         </div>
         <div class="command">
-          <h3>Placeholder</h3>
-          <p>Placeholder</p>
+          <h3>leave</h3>
+          <p>Leave the current voice channel.</p>
         </div>
         <div class="command">
-          <h3></h3>
-          <p></p>
+          <h3>play</h3>
+          <p>Play an audio/song from a given URL. Any URL that yt-dlp supports also works.</p>
+        </div>
+        <div class="command">
+          <h3>repeat</h3>
+          <p>Repeat the currently playing audio/song.</p>
+        </div>
+        <div class="command">
+          <h3>queue</h3>
+          <p>Display the current queue.</p>
+        </div>
+        <div class="command">
+          <h3>skip</h3>
+          <p>Skip the currently playing audio/song.</p>
+        </div>
+        <div class="command">
+          <h3>stop</h3>
+          <p>Stop the currently playind audio.</p>
+        </div>
+        <div class="command">
+          <h3>clear</h3>
+          <p>Clear the queue.</p>
+        </div>
+        <div class="command">
+          <h3>pause</h3>
+          <p>Pause the currently playing audio.</p>
+        </div>
+        <div class="command">
+          <h3>resume</h3>
+          <p>Resume the currently paused audio.</p>
+        </div>
+        <div class="command">
+          <h3>nowplaying</h3>
+          <p>Display information about the currently playing audio/song.</p>
         </div>
       </div>
     </section>
