--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
           <p>Leave the current voice channel.</p>
         </div>
         <div class="command">
-          <h3>play</h3>
+          <h3>play/p</h3>
           <p>Play an audio/song from a given URL. Any URL that yt-dlp supports also works.</p>
         </div>
         <div class="command">
-          <h3>repeat</h3>
+          <h3>repeat/p</h3>
           <p>Repeat the currently playing audio/song.</p>
         </div>
         <div class="command">
@@ -70,8 +70,44 @@
           <p>Resume the currently paused audio.</p>
         </div>
         <div class="command">
-          <h3>nowplaying</h3>
+          <h3>nowplaying/np</h3>
           <p>Display information about the currently playing audio/song.</p>
+        </div>
+        <div class="command">
+          <h3>help/h/commands/c/cmds/pleasehelpme</h3>
+          <p>Get a list of my commands.</p>
+        </div>
+        <div class="command">
+          <h3>ping/pong/latency/whatsmylatency</h3>
+          <p>Get info and latency about G-Man.</p>
+        </div>
+        <div class="command">
+          <h3>caption</h3>
+          <p>Caption media.</p>
+        </div>
+        <div class="command">
+          <h3>code</h3>
+          <p>Execute code.</p>
+        </div>
+        <div class="command">
+          <h3>exif/ffprobe</h3>
+          <p>Use FFprobe to extract exif metadata from media.</p>
+        </div>
+        <div class="command">
+          <h3>ffmpeg</h3>
+          <p>Use FFmpeg as if its a CLI!</p>
+        </div>
+        <div class="command">
+          <h3>tutorial</h3>
+          <p>Make an oldschool video tutorial.</p>
+        </div>
+        <div class="command">
+          <h3>imagemagick/magick</h3>
+          <p>Use ImageMagick as if its a CLI!</p>
+        </div>
+        <div class="command">
+          <h3>yt-dlp/youtube-dl/ytdl/youtubedl/ytdlp/download/dl</h3>
+          <p>Use yt-dlp! (for a list of formats use --listformats)</p>
         </div>
       </div>
     </section>
