--- a/index.html
+++ b/index.html
@@ -109,6 +109,38 @@
           <h3>yt-dlp/youtube-dl/ytdl/youtubedl/ytdlp/download/dl</h3>
           <p>Use yt-dlp! (for a list of formats use --listformats)</p>
         </div>
+        <div class="command">
+          <h3>youtube/yt</h3>
+          <p>Search YouTube.</p>
+        </div>
+        <div class="command">
+          <h3>userinfo/user/member/memberinfo</h3>
+          <p>Displays information about a user. Defaults to the author.</p>
+        </div>
+        <div class="command">
+          <h3>serverinfo/server/guild/guildinfo</h3>
+          <p>Displays information about a server. Defaults to the current server.</p>
+        </div>
+        <div class="command">
+          <h3>channelinfo/channel</h3>
+          <p>Displays information about a text channel. Defaults to the current channel.</p>
+        </div>
+        <div class="command">
+          <h3>voiceinfo/vc/vcinfo/voice</h3>
+          <p>Displays information about a voice channel. Defaults to the current voice channel the author is in.</p>
+        </div>
+        <div class="command">
+          <h3>threadinfo/thread</h3>
+          <p>Displays information about a text channel's thread.</p>
+        </div>
+        <div class="command">
+          <h3>messageinfo/msg/message/msginfo</h3>
+          <p>Displays information about a message.</p>
+        </div>
+        <div class="command">
+          <h3>emojiinfo/emoji</h3>
+          <p>Displays information about an emoji.</p>
+        </div>
       </div>
     </section>
     <section id="invite">
