--- a/index.html
+++ b/index.html
@@ -141,6 +141,42 @@
           <h3>emojiinfo/emoji</h3>
           <p>Displays information about an emoji.</p>
         </div>
+        <div class="command">
+          <h3>stickerinfo/sticker</h3>
+          <p>Displays information about a sticker.</p>
+        </div>
+        <div class="command">
+          <h3>inviteinfo</h3>
+          <p>Displays information about an invite code.</p>
+        </div>
+        <div class="command">
+          <h3>permissions/perms</h3>
+          <p>Displays a user's permissions in a channel. Defaults to the current channel and author.</p>
+        </div>
+        <div class="command">
+          <h3>roleinfo/role</h3>
+          <p>Displays information about a role. Defaults to the everyone role.</p>
+        </div>
+        <div class="command">
+          <h3>baninfo</h3>
+          <p>Displays information about a banned user.</p>
+        </div>
+        <div class="command">
+          <h3>botinfo</h3>
+          <p>Displays information about the bot.</p>
+        </div>
+        <div class="command">
+          <h3>weatherinfo/weather</h3>
+          <p>Displays information about the weather in a location.</p>
+        </div>
+        <div class="command">
+          <h3>colorinfo/color</h3>
+          <p>Displays information about a color. Defaults to a random color.</p>
+        </div>
+        <div class="command">
+          <h3>gradientinfo/gradient</h3>
+          <p>Displays information about a gradient. Defaults to a random gradient.</p>
+        </div>
       </div>
     </section>
     <section id="invite">
