--- a/index.html
+++ b/index.html
@@ -177,6 +177,42 @@
           <h3>gradientinfo/gradient</h3>
           <p>Displays information about a gradient. Defaults to a random gradient.</p>
         </div>
+        <div class="command">
+          <h3>ai</h3>
+          <p>Use G-AI to chat, ask questions, and generate responses.</p>
+        </div>
+        <div class="command">
+          <h3>resetai</h3>
+          <p>Reset the conversation history of G-AI.</p>
+        </div>
+        <div class="command">
+          <h3>remind/reminder</h3>
+          <p>Set a reminder for yourself.</p>
+        </div>
+        <div class="command">
+          <h3>reminders</h3>
+          <p>View your reminders.</p>
+        </div>
+        <div class="command">
+          <h3>serverreminders</h3>
+          <p>View all reminders for the server.</p>
+        </div>
+        <div class="command">
+          <h3>deletereminder/reminderdelete/delreminder</h3>
+          <p>Delete a reminder, optionally an user's reminders if you have manage server permissions.</p>
+        </div>
+        <div class="command">
+          <h3>clearreminders/remindersclear/clrreminders</h3>
+          <p>Clear all reminders for yourself or user/server if you have manage server permissions.</p>
+        </div>
+        <div class="command">
+          <h3>ruserinfo/ruser</h3>
+          <p>Get information about a Roblox user.</p>
+        </div>
+        <div class="command">
+          <h3>rgameinfo/rgame</h3>
+          <p>Get information about a Roblox game.</p>
+        </div>
       </div>
     </section>
     <section id="invite">
