--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <li><a href="#invite">Bot Invite</a></li>
           <li><a href="#support">Support</a></li>
           <li><a href="#about">About the bot</a></li>
+          <li><a href="https://github.com/MiniatureEge2006/g_man-revived">Source Code</a></li>
         </ul>
       </nav>
     </header>
