--- a/index.html
+++ b/index.html
@@ -214,6 +214,46 @@
           <h3>rgameinfo/rgame</h3>
           <p>Get information about a Roblox game.</p>
         </div>
+        <div class="command">
+          <h3>command/cmd</h3>
+          <p>Enable or disable a command.</p>
+        </div>
+        <div class="command">
+          <h3>blocklist</h3>
+          <p>List all blocked users, channels, and roles.</p>
+        </div>
+        <div class="command">
+          <h3>removeguildprefix/rmguildprefix/rmgprefix/rmgp</h3>
+          <p>Remove a guild prefix.</p>
+        </div>
+        <div class="command">
+          <h3>unblock</h3>
+          <p>Unblocks a user, channel, or role from using the bot.</p>
+        </div>
+        <div class="command">
+          <h3>listguildprefixes/lsguildprefixes/lsgprefixes/lsgp</h3>
+          <p>List the guild prefixes.</p>
+        </div>
+        <div class="command">
+          <h3>allow</h3>
+          <p>Allows a user, channel, or role to use the bot.</p>
+        </div>
+        <div class="command">
+          <h3>commandclear/cmdclear</h3>
+          <p>Clear all command permissions for a command.</p>
+        </div>
+        <div class="command">
+          <h3>reload <span style="color: red;">(OWNER ONLY)</span></h3>
+          <p>Reloads extensions.</p>
+        </div>
+        <div class="command">
+          <h3>deny</h3>
+          <p>Denies a user, channel, or role from using the bot. (Not to be confused with <code>block</code>.)</p>
+        </div>
+        <div class="command">
+          <h3>sync <span style="color: red;">(OWNER ONLY)</span></h3>
+          <p>Sync slash commands.</p>
+        </div>
       </div>
     </section>
     <section id="invite">
