--- a/index.html
+++ b/index.html
@@ -254,6 +254,38 @@
           <h3>sync <span style="color: red;">(OWNER ONLY)</span></h3>
           <p>Sync slash commands.</p>
         </div>
+        <div class="command">
+          <h3>addpersonalprefix/apersonalprefix/apprefix/app</h3>
+          <p>Add a personal prefix for yourself.</p>
+        </div>
+        <div class="command">
+          <h3>removepersonalprefix/rmpersonalprefix/rmpprefix/rmpp</h3>
+          <p>Remove a personal prefix that you made.</p>
+        </div>
+        <div class="command">
+          <h3>allowlist</h3>
+          <p>List all allowed users, channels, and roles.</p>
+        </div>
+        <div class="command">
+          <h3>listpersonalprefixes/lspersonalprefixes/lspprefixes/lspp</h3>
+          <p>List your personal prefixes.</p>
+        </div>
+        <div class="command">
+          <h3>eval/exec <span style="color: red;">(OWNER ONLY)</span></h3>
+          <p>Evaluate code.</p>
+        </div>
+        <div class="command">
+          <h3>commandlist/cmdlist</h3>
+          <p>List all command permissions for a command.</p>
+        </div>
+        <div class="command">
+          <h3>addguildprefix/aguildprefix/agprefix/agp</h3>
+          <p>Add a guild prefix for the current guild.</p>
+        </div>
+        <div class="command">
+          <h3>block</h3>
+          <p>Blocks a user, channel, or role from using the bot.</p>
+        </div>
       </div>
     </section>
     <section id="invite">
