--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <p>Play an audio/song from a given URL. Any URL that yt-dlp supports also works.</p>
         </div>
         <div class="command">
-          <h3>repeat/p</h3>
+          <h3>repeat/loop</h3>
           <p>Repeat the currently playing audio/song.</p>
         </div>
         <div class="command">
