--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
           <p>Play an audio/song from a given URL. Any URL that yt-dlp supports also works.</p>
         </div>
         <div class="command">
+          <h3>shuffle</h3>
+          <p>Shuffle the current queue/playlist.</p>
+        </div>
+        <div class="command">
           <h3>repeat/loop</h3>
-          <p>Repeat the currently playing audio/song.</p>
+          <p>Repeat the currently playing audio/song or playlist.</p>
         </div>
         <div class="command">
           <h3>queue</h3>
