--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="command">
           <h3>play/p</h3>
-          <p>Play an audio/song from a given URL. Any URL that yt-dlp supports also works.</p>
+          <p>Play an audio/song or playlist from a given URL. Any URL that yt-dlp supports also works.</p>
         </div>
         <div class="command">
           <h3>shuffle</h3>
