--- a/index.html
+++ b/index.html
@@ -187,6 +187,22 @@
           <p>Use G-AI to chat, ask questions, and generate responses.</p>
         </div>
         <div class="command">
+          <h3>setsystemprompt</h3>
+          <p>Set a custom system prompt for G-AI.</p>
+        </div>
+        <div class="command">
+          <h3>resetsystemprompt</h3>
+          <p>Reset your system prompt back to default.</p>
+        </div>
+        <div class="command">
+          <h3>exportchat</h3>
+          <p>Export your conversation history with G-AI.</p>
+        </div>
+        <div class="command">
+          <h3>importchat</h3>
+          <p>Import your conversation history with G-AI.</p>
+        </div>
+        <div class="command">
           <h3>resetai</h3>
           <p>Reset the conversation history of G-AI.</p>
         </div>
