--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
           <p>Use yt-dlp! (for a list of formats use --listformats)</p>
         </div>
         <div class="command">
-          <h3>youtube/yt</h3>
-          <p>Search YouTube.</p>
+          <h3>search/youtube/yt</h3>
+          <p>Search for YouTube.</p>
         </div>
         <div class="command">
           <h3>userinfo/user/member/memberinfo</h3>
